base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: anything-it-will-be-replace
