base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
#  namespace: dev
  labels:
    app: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app-1
          image: dockerconnectme/nginx:v1.0.1
          ports:
            - containerPort: 8080
